# thinlens-pathtracer

./: .gitignore  README.md
code/: CMakeLists.txt  data.in
code/include/int/thinlens/auxiliaries/: utility.h
code/include/int/thinlens/camera/: perspective.h  projective.h
code/src/: CMakeLists.txt  pathtracer.cpp  raytracer.cpp
code/src/camera/: CMakeLists.txt  README.md  camera.cpp  perspective.cpp  projective.cpp
src/: CMakeLists.txt  TestModel.h  ThinLensPT  main.cpp  utility.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h  perspective.cpp  perspective.h  projective.cpp  projective.h
src/includes/own/auxiliaries/: SDLauxiliary.h  TestModel.h  utility.h
src/renderer/: CMakeLists.txt  pathtracer.cpp  raytracer.cpp
